--- a/main.css
+++ b/main.css
@@ -44,12 +44,13 @@ a:visited {
 }
 
 .footer {
-    position: fixed;
+    
     left: 0;
     bottom: 1;
     width: 100%;
     color: white;
     text-align: center;
+    padding: 10px 0;
 }
 
 .contactbac {
