--- a/main.css
+++ b/main.css
@@ -16,6 +16,15 @@
     margin-left: 150px;
 }
 
+.flip {
+    
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    margin-left: 1600px;
+   
+}
+
 .body {
     background-color: #9a9bff;
     background-repeat: no-repeat;
@@ -68,3 +77,48 @@ a:visited {
    
   
 }
+
+ /* flip card */
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+
+    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  }
+  /* This container is needed to position the front and back side */
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  /* Do an horizontal flip when you move the mouse over the flip box container */
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  /* Position the front and back side */
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+  }
+  
+  /* Style the front side (fallback if image is missing) */
+  .flip-card-front {
+    
+    color: black;
+  }
+  
+  /* Style the back side */
+  .flip-card-back {
+    background-color: #9a9bff;
+    color: white;
+    transform: rotateY(180deg);
+  }
