--- a/main.css
+++ b/main.css
@@ -72,47 +72,37 @@ a:visited {
 
 
  /* flip card */
-
-.flip-card {
-    background-color: transparent;
-    width: 300px;
-    height: 300px;
-    perspective: 1000px;
-}
-
-.flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
     text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
+ }
+  
+.title {
+    color: grey;
+    font-size: 18px;
 }
-
-.flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-}
-
-.flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-
-.flip-card-front {
-    
-    color: black;
-}
-
-.flip-card-back {
-    background-color: #9a9bff;
+  
+.button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
     color: white;
-    transform: rotateY(180deg);
-  }
-
-
-
-
-  /*  like and dislike*/
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+ }
+  
+.a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+ }
+  
+.button:hover, a:hover {
+    opacity: 0.7;
+ }
